// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` operator info test  works as planned: Before anything 1`] = `
<div
  className="operatorinfo"
>
  {
  "item": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
    "cameras": [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c2bbbbbbbbbbbbbbbbbbbbbb",
      "c3bbbbbbbbbbbbbbbbbbbbbb"
    ],
    "operators": [
      "u1",
      "u2"
    ],
    "operatorCameraMapping": [
      {
        "operator": "u1",
        "cameras": [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
          "c3bbbbbbbbbbbbbbbbbbbbbb"
        ]
      },
      {
        "operator": "u2",
        "cameras": [
          "c2bbbbbbbbbbbbbbbbbbbbbb"
        ]
      }
    ]
  },
  "currentCameras": [],
  "filteredList": []
}
</div>
`;

exports[` operator info test  works as planned: Invalid user selected 1`] = `
<div
  className="operatorinfo"
>
  {
  "item": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
    "cameras": [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c2bbbbbbbbbbbbbbbbbbbbbb",
      "c3bbbbbbbbbbbbbbbbbbbbbb"
    ],
    "operators": [
      "u1",
      "u2"
    ],
    "operatorCameraMapping": [
      {
        "operator": "u1",
        "cameras": [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
          "c3bbbbbbbbbbbbbbbbbbbbbb"
        ]
      },
      {
        "operator": "u2",
        "cameras": [
          "c2bbbbbbbbbbbbbbbbbbbbbb"
        ]
      }
    ]
  },
  "currentOperator": "blabliblu",
  "currentCameras": [],
  "filteredList": []
}
</div>
`;

exports[` operator info test  works as planned: Removed user selection 1`] = `
<div
  className="operatorinfo"
>
  {
  "item": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
    "cameras": [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c2bbbbbbbbbbbbbbbbbbbbbb",
      "c3bbbbbbbbbbbbbbbbbbbbbb"
    ],
    "operators": [
      "u1",
      "u2"
    ],
    "operatorCameraMapping": [
      {
        "operator": "u1",
        "cameras": [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
          "c3bbbbbbbbbbbbbbbbbbbbbb"
        ]
      },
      {
        "operator": "u2",
        "cameras": [
          "c2bbbbbbbbbbbbbbbbbbbbbb"
        ]
      }
    ]
  },
  "currentOperator": "",
  "currentCameras": [],
  "filteredList": []
}
</div>
`;

exports[` operator info test  works as planned: first user selected 1`] = `
<div
  className="operatorinfo"
>
  {
  "item": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
    "cameras": [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c2bbbbbbbbbbbbbbbbbbbbbb",
      "c3bbbbbbbbbbbbbbbbbbbbbb"
    ],
    "operators": [
      "u1",
      "u2"
    ],
    "operatorCameraMapping": [
      {
        "operator": "u1",
        "cameras": [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
          "c3bbbbbbbbbbbbbbbbbbbbbb"
        ]
      },
      {
        "operator": "u2",
        "cameras": [
          "c2bbbbbbbbbbbbbbbbbbbbbb"
        ]
      }
    ]
  },
  "currentOperator": "u1",
  "currentCameras": [
    "c1bbbbbbbbbbbbbbbbbbbbbb",
    "c3bbbbbbbbbbbbbbbbbbbbbb"
  ],
  "filteredList": []
}
</div>
`;
